--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
   - "3.6"
 install:
   - "pip install pytest"
-  - "pip install -r requirement.txt"
+  - "pip install -r requirements.txt"
 script: python -m pytest tests/
